# AICA-Bench

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  site.css
.github/workflows/: static.yml
benchmark/: example.yaml
docs/: index.html
docs/static/css/: index.css
examples/config-yaml/dataset-samples/: EU_observer_emotion_Abstract.yaml  EU_observer_emotion_AffectNet.yaml  EU_observer_emotion_Artphoto.yaml  EU_observer_emotion_FI.yaml  EU_observer_emotion_Findingemo.yaml  EU_observer_emotion_FlickrLDL.yaml  EU_observer_emotion_TwitterLDL.yaml  EU_observer_emotion_emoset.yaml  EU_observer_emotion_emotic.yaml  EU_observer_emotion_emotion6.yaml  example.yaml
examples/config-yaml/instructions-builder/: EU_observer_emotion_Abstract.yaml  EU_observer_emotion_AffectNet.yaml  EU_observer_emotion_Artphoto.yaml  EU_observer_emotion_FI.yaml  EU_observer_emotion_Findingemo.yaml  EU_observer_emotion_FlickrLDL.yaml  EU_observer_emotion_TwitterLDL.yaml  EU_observer_emotion_emoset.yaml  EU_observer_emotion_emotic.yaml  EU_observer_emotion_emotion6.yaml
examples/data_preprocessing/: AffectNet.py  EmoVIT.py  Emotion6.py  FI.py  abstract.py  artphoto.py  emoset.py  emotic.py  findingemo.py  flickrldl.py  twitterldl.py
src/aica_vlm/: cli.py  dataset.py  emotion_model.py
src/aica_vlm/adaptation/: __init__.py  closed_model_interface.py  (+11 more)
static/css/: index.css
test/: test_adaptation_run.py  test_closesource_run.py  test_config_loader.py  test_instruction_builder.py  test_metrics.py
(+75 files in other folders)
